--- a/src/zytj/templates/base.html
+++ b/src/zytj/templates/base.html
@@ -2,62 +2,81 @@
 <html>
 {% load  i18n staticfiles %}
 
-	<head>
-		<title>AList Page</title>
-		
-		<link rel="stylesheet" href="{% static "css/style.css" %}">
-		<link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
-		<link rel="stylesheet" href="{% static "js/chosen/chosen.css" %}" />
+<head>
+    <title>AList Page</title>
 
-        {% block extra_css %}{% endblock %}
-		<script type="text/javascript" src="{% static "js/jquery-1.8.2.min.js" %}"></script>
-		<script type="text/javascript" src="{% static "bootstrap/js/bootstrap-tooltip.js" %}"></script>
-		<script type="text/javascript" src="{% static "js/isotope.js" %}"></script>
-		<script type="text/javascript" src="{% static "js/jquery.infinitescroll.js" %}"></script>
-		<script type="text/javascript" src="{% static  "js/chosen/chosen.jquery.min.js" %}"></script>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'js/chosen/chosen.css' %}" />
+    {% block extra_css %}{% endblock %}
 
-        {% block extra_js %}{% endblock %}
-		
-	</head>
-	
-	<body>
-        <header>
-            <div id="header"></div>
-        </header>
+    <script type="text/javascript" src="{% static 'js/jquery-1.8.2.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/isotope.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.infinitescroll.js' %}"></script>
+    <script type="text/javascript" src="{% static  'js/chosen/chosen.jquery.min.js' %}"></script>
+    {% block extra_js %}{% endblock %}
+
+</head>
+
+<body>
+<header>
+    <div id="header"></div>
+</header>
+        <div class="row">
+  <div class="col-md-6">.col-md-6</div>
+  <div class="col-md-6">.col-md-6</div>
+</div>
+<div id="wrapper">
+    <div class="row">
+      <div class="col-md-3">
+      {% block left_panel %}
         <nav>
-		<div id="nav">
-			<ul>
-				<li><a href="/zytj/alist" data-filter=".cat1">Ascending from Year Low</a></li>
-				<li><a href="/zytj/dlist" data-filter=".cat2">Descending from Year High</a></li>
-				<li><a href="/zytj/alist/20/" data-filter=".cat2">Ascending from 20 days</a></li>
-			</ul>
-			<ul>
-				<select data-placeholder="Choose a Industry" id="industry-select">
-					<option value=""></option>
-					<option value="all">all</option>
-				{% for industry in industry_set%}
-			        <option value="{{industry}}">{{industry}}</option>			        
-			    {%endfor%}
-    			</select>    			
-			</ul>
-			
-			<ul>
-				<select data-placeholder="Choose a List" id="list-select">
-					<option value=""></option>					
-				{% for list in lists%}
-			        <option value="{{list}}">{{list}}</option>			        
-			    {%endfor%}
-    			</select>    			
-			</ul>
-			
-			<ul>
-				<input type="text" data-provide="typeahead">				
-			</ul>
-		</div>
-            </nav>
+            <div id="nav">
+                <ul>
+                    <li><a href="/zytj/alist" data-filter=".cat1">Ascending from Year Low</a></li>
+                    <li><a href="/zytj/dlist" data-filter=".cat2">Descending from Year High</a></li>
+                    <li><a href="/zytj/alist/20/" data-filter=".cat2">Ascending from 20 days</a></li>
+                </ul>
+                <ul>
+                    <select data-placeholder="Choose a Industry" id="industry-select">
+                        <option value=""></option>
+                        <option value="all">all</option>
+                    {% for industry in industry_set%}
+                        <option value="{{industry}}">{{industry}}</option>
+                    {%endfor%}
+                    </select>
+                </ul>
 
-        {% block content %} {% endblock %}
-		
-		
-	</body>
+                <ul>
+                    <select data-placeholder="Choose a List" id="list-select">
+                        <option value=""></option>
+                    {% for list in lists%}
+                        <option value="{{list}}">{{list}}</option>
+                        {%endfor%}
+                    </select>
+                </ul>
+
+                <ul>
+                    <input type="text" data-provide="typeahead">
+                </ul>
+            </div>
+        </nav>
+          {% endblock %}
+      </div>
+
+         <div class="col-md-9">
+            {% block content %} {% endblock %}
+        </div>
+    </div>
+</div>
+
+<footer>
+    <nav>
+        <ul>
+            <li><a class="top" href="#" title="Back to top">Top</a></li>
+        </ul>
+    </nav>
+</footer>
+</body>
 </html>
