update portfolio feature #60

--- a/portfolio/templates/stock/alist.html
+++ b/portfolio/templates/stock/alist.html
@@ -1,121 +1,9 @@
-<!DOCTYPE html>
+{% extends "portfolio/base.html" %}
 {% load staticfiles %}
-<html>
-	<head>
-        <meta charset="utf-8">
-		<title>Stock Portfolio</title>
-		
-		<link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'vex/css/vex.css' %}" />
-        <link rel="stylesheet" href="{% static 'vex/css/vex-theme-os.css' %}" />
-        <link rel="stylesheet" href="{% static 'font-awesome-4.0.3/css/font-awesome.min.css' %}" />
 
-
-		<script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'handlebars/handlebars.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'vex/js/vex.combined.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/list.min.js' %}"></script>
-        <script>vex.defaultOptions.className = 'vex-theme-os';</script>
-
-        <script id="entry-template" type="text/x-handlebars-template">
-          template content
-        </script>
-
-		<script type="text/javascript">
-        function modify_stock(code){
-            var source   = $("#entry-template").html();
-            var template = Handlebars.compile(source);
-            var context = {title: "My New Post", body: "This is my first post!"}
-            var html    = template(context);
-                $.get( "detail", { code: code},function( data ) {
-                  //$( ".result" ).html( data );
-                    console.log(data)
-                    amount = data['amount']
-                    up_threshold = data['up_threshold']
-                    down_threshold = data['down_threshold']
-                  //window.location.reload();
-                    vex.dialog.open({
-                      afterOpen: function($vexContent) {
-                          $('#code').val(code)
-                          $('#amount').val(amount)
-                          $('#up_threshold').val(up_threshold)
-                          $('#down_threshold').val(down_threshold)
-                          return $vexContent.append(html);
-                      },
-                      message: 'Enter your code and amount:',
-                      input: "<input id=\"code\" name=\"code\" type=\"text\" placeholder=\"Code\" required />\n<input id=\"amount\" name=\"amount\" type=\"text\" placeholder=\"Amount\" required /><input id=\"up_threshold\" name=\"up_threshold\" type=\"text\" placeholder=\"Up Threshold\" required /><input id=\"down_threshold\" name=\"down_threshold\" type=\"text\" placeholder=\"Down Threshold\" required />",
-                      buttons: [
-                        $.extend({}, vex.dialog.buttons.YES, {
-                          text: 'Submit'
-                        }), $.extend({}, vex.dialog.buttons.NO, {
-                          text: 'Cancel'
-                        })
-                      ],
-                      callback: function(data) {
-                        if (data === false) {
-                          return console.log('Cancelled');
-                        }
-                        $.get( "update", { code: data.code, amount: data.amount,up_threshold:data.up_threshold,down_threshold:data.down_threshold },function( data ) {
-                          //$( ".result" ).html( data );
-                          window.location.reload();
-                        });
-                        return console.log('Code', data.code, 'Amount', data.amount, 'Up', data.up_threshold, 'Down', data.down_threshold);
-                      }
-                    });
-                });
-
-        }
-		
-    $(document).ready(function(){
-
-        $("#create").click(function() {
-            vex.dialog.open({
-              message: 'Enter your code and amount:',
-              input: "<input name=\"code\" type=\"text\" placeholder=\"Code\" required />\n<input name=\"amount\" type=\"text\" placeholder=\"Amount\" required />",
-              buttons: [
-                $.extend({}, vex.dialog.buttons.YES, {
-                  text: 'Login'
-                }), $.extend({}, vex.dialog.buttons.NO, {
-                  text: 'Back'
-                })
-              ],
-              callback: function(data) {
-                if (data === false) {
-                  return console.log('Cancelled');
-                }
-                $.get( "create", { code: data.code, amount: data.amount },function( data ) {
-                  //$( ".result" ).html( data );
-                  window.location.reload();
-                });
-                return console.log('Username', data.code, 'Password', data.amount);
-              }
-            });
-        });
-
-            $('.tag').click(function(){
-                console.log('apply tag"'+$(this).text())
-            });
-
-           $(".delete").click(function(){
-              console.log("delete now:"+$(this).data("value"));
-              var url = "{% url 'portfolio:delete' pk=999999 %}";
-              url = url.replace(/999999/, 'test')
-              console.log(url);
-              
-           });
-
-
-
-        });
-		</script>
-	</head>
-	
-	<body>
-        <header id="header"><h1>Stock Portfolio</h1></header>
-        <article>Total:{{market_value}}</article>
-
-		<div id="content" class="container">
+{% block content %}
+    <article>Total:{{market_value}}</article>
+    <div id="content" class="container">
 
             <ul class="nav nav-tabs">
                 <li class="dropdown">
@@ -167,8 +55,98 @@
                 </button>
             </from>
 		</div>
+{% endblock %}
 
-		
-        <footer><h3>Test Footer</h3></footer>
-	</body>
-</html>
+{% block extra_js %}
+    <script id="entry-template" type="text/x-handlebars-template">
+          template content
+        </script>
+
+		<script type="text/javascript">
+        function modify_stock(code){
+            var source   = $("#entry-template").html();
+            var template = Handlebars.compile(source);
+            var context = {title: "My New Post", body: "This is my first post!"}
+            var html    = template(context);
+                $.get( "detail", { code: code},function( data ) {
+                  //$( ".result" ).html( data );
+                    console.log(data)
+                    amount = data['amount']
+                    up_threshold = data['up_threshold']
+                    down_threshold = data['down_threshold']
+                  //window.location.reload();
+                    vex.dialog.open({
+                      afterOpen: function($vexContent) {
+                          $('#code').val(code)
+                          $('#amount').val(amount)
+                          $('#up_threshold').val(up_threshold)
+                          $('#down_threshold').val(down_threshold)
+                          return $vexContent.append(html);
+                      },
+                      message: 'Enter your code and amount:',
+                      input: "<input id=\"code\" name=\"code\" type=\"text\" placeholder=\"Code\" required />\n<input id=\"amount\" name=\"amount\" type=\"text\" placeholder=\"Amount\" required /><input id=\"up_threshold\" name=\"up_threshold\" type=\"text\" placeholder=\"Up Threshold\" required /><input id=\"down_threshold\" name=\"down_threshold\" type=\"text\" placeholder=\"Down Threshold\" required />",
+                      buttons: [
+                        $.extend({}, vex.dialog.buttons.YES, {
+                          text: 'Submit'
+                        }), $.extend({}, vex.dialog.buttons.NO, {
+                          text: 'Cancel'
+                        })
+                      ],
+                      callback: function(data) {
+                        if (data === false) {
+                          return console.log('Cancelled');
+                        }
+                        $.get( "update", { code: data.code, amount: data.amount,up_threshold:data.up_threshold,down_threshold:data.down_threshold },function( data ) {
+                          //$( ".result" ).html( data );
+                          window.location.reload();
+                        });
+                        return console.log('Code', data.code, 'Amount', data.amount, 'Up', data.up_threshold, 'Down', data.down_threshold);
+                      }
+                    });
+                });
+
+        }
+
+    $(document).ready(function(){
+
+        $("#create").click(function() {
+            vex.dialog.open({
+              message: 'Enter your code and amount:',
+              input: "<input name=\"code\" type=\"text\" placeholder=\"Code\" required />\n<input name=\"amount\" type=\"text\" placeholder=\"Amount\" required />",
+              buttons: [
+                $.extend({}, vex.dialog.buttons.YES, {
+                  text: 'OK'
+                }), $.extend({}, vex.dialog.buttons.NO, {
+                  text: 'Back'
+                })
+              ],
+              callback: function(data) {
+                if (data === false) {
+                  return console.log('Cancelled');
+                }
+                $.get( "create", { code: data.code, amount: data.amount },function( data ) {
+                  //$( ".result" ).html( data );
+                  window.location.reload();
+                });
+                return console.log('Username', data.code, 'Password', data.amount);
+              }
+            });
+        });
+
+            $('.tag').click(function(){
+                console.log('apply tag"'+$(this).text())
+            });
+
+           $(".delete").click(function(){
+              console.log("delete now:"+$(this).data("value"));
+              var url = "{% url 'portfolio:delete' pk=999999 %}";
+              url = url.replace(/999999/, $(this).data("value"))
+              console.log(url);
+               window.location.href=url;
+           });
+
+
+
+        });
+		</script>
+{% endblock %}
