--- a/portfolio/templates/portfolio/history.html
+++ b/portfolio/templates/portfolio/history.html
@@ -22,7 +22,10 @@
             <td>{{ market_value }}</td>
             <td>{{ total }}</td>
             <td>{{ position_ratio }}</td>
-            <td><a class="delete" data-row-key="{{oid}}" href="#"><i class="fa fa-trash-o" ></i></a></td>
+            <td>
+            <a class="delete" data-row-key="{{oid}}" href="#"><i class="fa fa-trash-o" ></i></a>
+            <a class="detail" data-row-key="{{oid}}" href="#" target="_blank"><i class="fa fa-search" ></i></a>
+            </td>
         </tr>
     {% endverbatim %}
     </script>
@@ -31,14 +34,22 @@
     $(document).ready(function(){
         //bind "click" event to dynamically created element this way!
         $(document).on("click",".delete", function(){
-                console.log('clicked');
             //a trick to pass JS variable to django url template tag
             var url = "{% url 'portfolio:delete_portfolio' pk=999999 %}";
-            console.log(url);
             var id = $(this).data("rowKey");
             url = url.replace(/999999/,id);
             console.log(url);
-            window.location.href = url;
+            $.get(url,function(data){
+                console.log(data);
+            });
+        });
+        $(document).on("click",".detail", function(){
+            //a trick to pass JS variable to django url template tag
+            var url = "{% url 'portfolio:portfolio_detail' pk=999999 %}";
+            var id = $(this).data("rowKey");
+            url = url.replace(/999999/,id);
+            console.log(url);
+            window.location.href=url
         });
         var mode = "{{ mode }}";
 {##}
@@ -50,13 +61,14 @@
 {#            window.location.href = url;#}
 {#        });#}
 {##}
-{#        $("#month").click(function(){#}
-{#            //a trick to pass JS variable to django url template tag#}
-{#            var url = "{% url 'management.adstats'%}";#}
-{#            url = url+'?mode=month';#}
-{#            console.log(url)#}
-{#            window.location.href = url;#}
-{#        });#}
+        $("#now").click(function(){
+            var url = "{% url 'portfolio:snapshot'%}";
+            $.get(url, function(data){
+                console.log(data);
+                $('.table > tbody:last').append('<tr><td>test</td></tr>');
+            });
+
+        });
 {##}
 {#        $("#search").click(function(){#}
 {#            //a trick to pass JS variable to django url template tag#}
@@ -111,7 +123,7 @@
                 market_value: marketValue, total: element.total,
                 position_ratio: parseFloat(element.position_ratio).toFixed(2)};
             var html    = template(context);
-            console.log(html);
+{#            console.log(html);#}
             $('.table > tbody:last').append(html);
         });
 
@@ -163,13 +175,14 @@
     <a id="search" class="btn btn-default">{% trans "search" %}</a>
     <div class="btn-group">
       <a id="last7Days" class="btn btn-default">{% trans "Last 7 days Statistics" %}</a>
-      <a id="month" class="btn btn-default">{% trans "Month Statistics" %}</a>
+      <a id="now" class="btn btn-default">{% trans "Now" %}</a>
     </div>
 </div>
 <div id="chart"></div>
 <table class="display table table-bordered" id="table">
     <thead>
         <th>{% trans "Date" %}</th>
+        <th>{% trans "Name" %}</th>
         <th>{% trans "Market Value" %}</th>
         <th>{% trans "Total" %}</th>
         <th>{% trans "Position Ratio" %}</th>
