--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles i18n %}
 
 {% block content %}
-    <article>Name:{{ name }} Total:{{total}}  Real Time Market:{{ real_time_market }} Market:{{market_value}} Position Ratio:{{position_ratio}}</article>
+    <article>Name:{{ name }} Total:{{total}} Financing: {{ financing }} Lever:{{ lever }} Real Time Market:{{ real_time_market }} Market:{{market_value}} Position Ratio:{{position_ratio}}</article>
     <small><a href="{% url 'portfolio:history' %}">History</a></small>
     <div id="content" class="container">
 
@@ -25,8 +25,9 @@
                         <th>{% trans "Amount" %}</th>
                         <th>Current</th>
                         <th class="sort" data-sort="market"><i class="fa fa-sort"></i>Market</th>
+                        <th class="sort" data-sort="percentage"><i class="fa fa-sort"></i>percentage</th>
                         <th>Modify</th>
-                        <th>Notify</th>
+                        <th>Remove</th>
                         <th>Tag</th>
                     </tr>
                 </thead>
@@ -43,6 +44,7 @@
                                     0
                                 {% endif %}
                             </td>
+                            <td>-</td>
                             <td><a data-value="{{ stock.code }}" class="btn btn-default modify" href="#"><i class="fa fa-pencil fa-fw"></i> Modify</a></td>
                             <td><a data-value="{{ stock.code }}" class="btn btn-danger delete" href="#"><i class="fa fa-trash-o fa-lg"></i> Delete</a></td>
                             <td>{{stock.tags }}</td>
