--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -44,7 +44,7 @@
                                     0
                                 {% endif %}
                             </td>
-                            <td>-</td>
+                            <td>{{stock.percentage}}</td>
                             <td><a data-value="{{ stock.code }}" class="btn btn-default modify" href="#"><i class="fa fa-pencil fa-fw"></i> Modify</a></td>
                             <td><a data-value="{{ stock.code }}" class="btn btn-danger delete" href="#"><i class="fa fa-trash-o fa-lg"></i> Delete</a></td>
                             <td>{{stock.tags }}</td>
